--- a/QSPI_TEST.ioc
+++ b/QSPI_TEST.ioc
@@ -2,8 +2,6 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.CPU_DCache=Enabled
-CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 File.Version=6
@@ -199,7 +197,7 @@ ProjectManager.DeviceId=STM32H743VITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x2000
+ProjectManager.HeapSize=0x4000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -211,7 +209,7 @@ ProjectManager.ProjectFileName=QSPI_TEST.ioc
 ProjectManager.ProjectName=QSPI_TEST
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x4000
+ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
@@ -305,7 +303,8 @@ TIM7.Prescaler=199
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=MSC
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-MSC_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-MSC_FS,MSC_MEDIA_PACKET-MSC_FS
+USB_DEVICE.MSC_MEDIA_PACKET-MSC_FS=4096
 USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode
