first work version

--- a/QSPI_TEST.ioc
+++ b/QSPI_TEST.ioc
@@ -215,8 +215,9 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+QUADSPI.ClockPrescaler=10
 QUADSPI.FlashSize=22
-QUADSPI.IPParameters=FlashSize,SampleShifting
+QUADSPI.IPParameters=FlashSize,SampleShifting,ClockPrescaler
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
 RCC.ADCFreq_Value=62500000
 RCC.AHB12Freq_Value=200000000
@@ -305,8 +306,9 @@ TIM7.Prescaler=199
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=MSC
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-MSC_FS,MSC_MEDIA_PACKET-MSC_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-MSC_FS,MSC_MEDIA_PACKET-MSC_FS,USBD_LPM_ENABLED-MSC_FS
 USB_DEVICE.MSC_MEDIA_PACKET-MSC_FS=4096
+USB_DEVICE.USBD_LPM_ENABLED-MSC_FS=0
 USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode
