--- a/QSPI_TEST.ioc
+++ b/QSPI_TEST.ioc
@@ -4,9 +4,61 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+ETH.IPParameters=MediaInterface
+ETH.MediaInterface=HAL_ETH_RMII_MODE
+FATFS.BSP.number=1
+FATFS.IPParameters=_USE_EXPAND,_USE_FIND,_USE_CHMOD,_USE_LABEL,_USE_FORWARD,_USE_LFN,_LFN_UNICODE,_FS_RPATH,_MAX_SS,_MIN_SS,_MULTI_PARTITION,_USE_TRIM,_USE_MUTEX
+FATFS._FS_RPATH=2
+FATFS._LFN_UNICODE=1
+FATFS._MAX_SS=4096
+FATFS._MIN_SS=4096
+FATFS._MULTI_PARTITION=1
+FATFS._USE_CHMOD=1
+FATFS._USE_EXPAND=1
+FATFS._USE_FIND=1
+FATFS._USE_FORWARD=1
+FATFS._USE_LABEL=1
+FATFS._USE_LFN=2
+FATFS._USE_MUTEX=1
+FATFS._USE_TRIM=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.instance=PD4
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PD4
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LWIP.ARP_TABLE_SIZE=32
+LWIP.BSP.number=1
+LWIP.ETHARP_SUPPORT_STATIC_ENTRIES=1
+LWIP.IPParameters=LWIP_HTTPD,LWIP_PERF,LWIP_TFTP,LWIP_SNTP,LWIP_MPU_COMPATIBLE,MEMP_SANITY_CHECK,MEM_SANITY_CHECK,ARP_TABLE_SIZE,ETHARP_SUPPORT_STATIC_ENTRIES
+LWIP.LWIP_HTTPD=1
+LWIP.LWIP_MPU_COMPATIBLE=1
+LWIP.LWIP_PERF=1
+LWIP.LWIP_SNTP=0
+LWIP.LWIP_TFTP=1
+LWIP.MEMP_SANITY_CHECK=1
+LWIP.MEM_SANITY_CHECK=1
+LWIP.Version=v2.1.2_Cube
+LWIP0.BSP.STBoard=false
+LWIP0.BSP.api=BSP_COMPONENT_DRIVER
+LWIP0.BSP.component=LAN8742
+LWIP0.BSP.condition=
+LWIP0.BSP.instance=LAN8742
+LWIP0.BSP.ip=
+LWIP0.BSP.mode=
+LWIP0.BSP.name=Driver_PHY
+LWIP0.BSP.semaphore=S_LAN8742
+LWIP0.BSP.solution=LAN8742
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg1.MEMORYMAP.CoreName=ARM Cortex-M7
@@ -73,60 +125,98 @@ Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=MEMORYMAP
-Mcu.IP3=NVIC
-Mcu.IP4=QUADSPI
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IP8=USART1
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP10=SDMMC1
+Mcu.IP11=SPI4
+Mcu.IP12=SYS
+Mcu.IP13=TIM7
+Mcu.IP14=USART1
+Mcu.IP15=USB_DEVICE
+Mcu.IP16=USB_OTG_FS
+Mcu.IP2=ETH
+Mcu.IP3=FATFS
+Mcu.IP4=FREERTOS
+Mcu.IP5=LWIP
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=QUADSPI
+Mcu.IP9=RCC
+Mcu.IPNb=17
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PD13
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13 (JTMS/SWDIO)
-Mcu.Pin16=PA14 (JTCK/SWCLK)
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB2
+Mcu.Pin14=PE10
+Mcu.Pin15=PE11
+Mcu.Pin16=PE12
+Mcu.Pin17=PE13
+Mcu.Pin18=PE14
+Mcu.Pin19=PB11
 Mcu.Pin2=PC13
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
-Mcu.Pin21=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=PB12
+Mcu.Pin21=PB13
+Mcu.Pin22=PD11
+Mcu.Pin23=PD12
+Mcu.Pin24=PD13
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA9
+Mcu.Pin28=PA10
+Mcu.Pin29=PA11
 Mcu.Pin3=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13 (JTMS/SWDIO)
+Mcu.Pin32=PA14 (JTCK/SWCLK)
+Mcu.Pin33=PC10
+Mcu.Pin34=PC11
+Mcu.Pin35=PC12
+Mcu.Pin36=PD2
+Mcu.Pin37=PD4
+Mcu.Pin38=PB6
+Mcu.Pin39=VP_FATFS_VS_SDIO
 Mcu.Pin4=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin40=VP_FATFS_VS_Generic
+Mcu.Pin41=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin42=VP_LWIP_VS_Enabled
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin45=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PH0-OSC_IN (PH0)
 Mcu.Pin6=PH1-OSC_OUT (PH1)
-Mcu.Pin7=PB2
-Mcu.Pin8=PD11
-Mcu.Pin9=PD12
-Mcu.PinsNb=22
+Mcu.Pin7=PC1
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA1.Mode=RMII
+PA1.Signal=ETH_REF_CLK
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Mode=Device_Only
@@ -137,8 +227,18 @@ PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA2.Mode=RMII
+PA2.Signal=ETH_MDIO
+PA7.Mode=RMII
+PA7.Signal=ETH_CRS_DV
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB11.Mode=RMII
+PB11.Signal=ETH_TX_EN
+PB12.Mode=RMII
+PB12.Signal=ETH_TXD0
+PB13.Mode=RMII
+PB13.Signal=ETH_TXD1
 PB2.GPIOParameters=GPIO_Speed
 PB2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB2.Mode=Single Bank 1
@@ -148,6 +248,14 @@ PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
 PB6.Mode=Single Bank 1
 PB6.Signal=QUADSPI_BK1_NCS
+PC1.Mode=RMII
+PC1.Signal=ETH_MDC
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDMMC1_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDMMC1_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDMMC1_CK
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=EXT_BUTTON
 PC13.GPIO_PuPd=GPIO_PULLDOWN
@@ -157,6 +265,14 @@ PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PC4.Mode=RMII
+PC4.Signal=ETH_RXD0
+PC5.Mode=RMII
+PC5.Signal=ETH_RXD1
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDMMC1_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDMMC1_D1
 PD11.GPIOParameters=GPIO_Speed
 PD11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD11.Mode=Single Bank 1
@@ -170,6 +286,33 @@ PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Locked=true
 PD13.Mode=Single Bank 1
 PD13.Signal=QUADSPI_BK1_IO3
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDMMC1_CMD
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=SD_Detect
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=LCD_LED
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=LCD_CS
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Speed
+PE12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE12.Mode=TX_Only_Simplex_Unidirect_Master
+PE12.Signal=SPI4_SCK
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=LCD_WR
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Speed
+PE14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE14.Locked=true
+PE14.Mode=TX_Only_Simplex_Unidirect_Master
+PE14.Signal=SPI4_MOSI
 PE2.GPIOParameters=GPIO_Speed
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE2.Mode=Single Bank 1
@@ -219,7 +362,7 @@ QUADSPI.ClockPrescaler=10
 QUADSPI.FlashSize=22
 QUADSPI.IPParameters=FlashSize,SampleShifting,ClockPrescaler
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
-RCC.ADCFreq_Value=62500000
+RCC.ADCFreq_Value=100000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
 RCC.APB1Freq_Value=100000000
@@ -239,19 +382,20 @@ RCC.D3PPRE=RCC_APB4_DIV2
 RCC.DFSDMACLkFreq_Value=400000000
 RCC.DFSDMFreq_Value=100000000
 RCC.DIVM1=5
+RCC.DIVM2=20
 RCC.DIVM3=25
 RCC.DIVN1=160
 RCC.DIVN2=160
 RCC.DIVN3=192
 RCC.DIVP1Freq_Value=400000000
-RCC.DIVP2Freq_Value=62500000
+RCC.DIVP2Freq_Value=100000000
 RCC.DIVP3Freq_Value=96000000
 RCC.DIVQ1Freq_Value=400000000
-RCC.DIVQ2Freq_Value=62500000
+RCC.DIVQ2Freq_Value=100000000
 RCC.DIVQ3=4
 RCC.DIVQ3Freq_Value=48000000
 RCC.DIVR1Freq_Value=400000000
-RCC.DIVR2Freq_Value=62500000
+RCC.DIVR2Freq_Value=100000000
 RCC.DIVR3Freq_Value=96000000
 RCC.FDCANFreq_Value=400000000
 RCC.FMCFreq_Value=200000000
@@ -262,7 +406,7 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=200000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCO_SEL,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCO_SEL,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
@@ -279,7 +423,8 @@ RCC.SAI1Freq_Value=400000000
 RCC.SAI23Freq_Value=400000000
 RCC.SAI4AFreq_Value=400000000
 RCC.SAI4BFreq_Value=400000000
-RCC.SDMMCFreq_Value=400000000
+RCC.SDMMC1CLockSelection=RCC_SDMMCCLKSOURCE_PLL2
+RCC.SDMMCFreq_Value=100000000
 RCC.SPDIFRXFreq_Value=400000000
 RCC.SPI123Freq_Value=400000000
 RCC.SPI45Freq_Value=100000000
@@ -295,11 +440,19 @@ RCC.USART234578Freq_Value=100000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=800000000
-RCC.VCO2OutputFreq_Value=125000000
+RCC.VCO2OutputFreq_Value=200000000
 RCC.VCO3OutputFreq_Value=192000000
 RCC.VCOInput1Freq_Value=5000000
-RCC.VCOInput2Freq_Value=781250
+RCC.VCOInput2Freq_Value=1250000
 RCC.VCOInput3Freq_Value=1000000
+SDMMC1.ClockDiv=10
+SDMMC1.IPParameters=ClockDiv
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI4.CalculateBaudRate=6.25 MBits/s
+SPI4.Direction=SPI_DIRECTION_2LINES_TXONLY
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI4.Mode=SPI_MODE_MASTER
+SPI4.VirtualType=VM_MASTER
 TIM7.IPParameters=Prescaler,Period
 TIM7.Period=1000
 TIM7.Prescaler=199
@@ -313,6 +466,14 @@ USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_LWIP_VS_Enabled.Mode=Enabled
+VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
@@ -322,4 +483,4 @@ VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
 board=custom
-isbadioc=false
+isbadioc=true
